# Software-Renderer

./: .gitignore  CMakeLists.txt  Cargo.toml  main.cpp  softwareRenderer.cpp
include/: polygon.h  softwareRenderer.h  vec2.h  vec3.h
src/: main.rs
